putfigure almost completed

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -29,7 +29,7 @@ SRC = ft_bzero.c ft_atoi.c \
 	ft_lstiter.c ft_lstmap.c ft_expmem.c \
 	ft_str_is_printable.c ft_strcasecmp.c ft_abs.c \
 	ft_strnchr.c ft_strbs.c ft_strfs.c ft_pushfront.c \
-	ft_bzeroint.c ft_sqrt.c
+	ft_bzeroint.c ft_sqrt.c ft_strcount.c
 CFLAGS = -g -Wall -Wextra -Werror
 OBJ_DIR = ./objs
 SRC_DIR = ./srcs
